@@ -1,7 +1,7 @@
 {
-  "timestamp" : "2022-04-30T00:41:28Z",
-  "count" : 13,
-  "count_minmax" : [ 13, 15 ],
+  "timestamp" : "2022-04-30T08:09:19Z",
+  "count" : 2,
+  "count_minmax" : [ 2, 15 ],
   "count_prev_day_inc" : 13,
   "count_prev_day_dec" : 22,
   "uniques" : 1,
