@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-30T00:41:28Z",
+  "timestamp" : "2022-04-30T08:09:19Z",
   "count" : 0,
   "count_minmax" : [ 0, 0 ],
   "count_prev_day_inc" : 0,
-  "count_prev_day_dec" : 2,
+  "count_prev_day_dec" : 13,
   "uniques" : 0,
   "uniques_minmax" : [ 0, 0 ],
   "uniques_prev_day_inc" : 0,
