@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-04-30T00:41:28Z",
+  "timestamp" : "2022-04-30T08:09:19Z",
   "count_outdated" : 1004,
   "uniques_outdated" : 60,
-  "count" : 1048,
+  "count" : 1037,
   "uniques" : 67,
   "views" : [
     {
       "timestamp": "2022-04-16T00:00:00Z",
-      "count": 13,
-      "count_minmax": [ 13, 15 ],
+      "count": 2,
+      "count_minmax": [ 2, 15 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
