@@ -1,3 +1,9 @@
+2022-04-30T08:09:19Z:
+* notice: last 14d: all unq: 33 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 1004 60 / 1048 67
+* notice: next accum: outdated-all outdated-unq / all unq: 1004 60 / 1037 67
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -11 // +0 +0 / -0 -13
+
 2022-04-30T00:41:28Z:
 * notice: last 14d: all unq: 44 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 1004 60 / 1050 67
